# module12Homework

./: CMakeLists.txt  main.cpp
checkingstringmultiples/: checkingstringmultiples.cpp  checkingstringmultiples.h
